Use Collection instead of SequencedCollection for excluded events and fix tests